--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
   examiner={Prof. Dr. Sven Strickroth },
   supervisor={Sigrid Laura Klinger, Dr. Thomas Weber},
   startdate={January 13, 2025},
-  enddate={May ..., 2025},
+  enddate={May 23, 2025},
   copyright=ccbysa, % ccbysa, ccbynosa, cc0, none
   language=english
 ]{lmu-thesis-cover}
@@ -53,9 +53,9 @@
 %Kurzfassung / abstract
 %auch im Stil vom Inhaltsverzeichnis
 \section*{Kurzfassung}
-Das Codeverständnis ist ein wesentlicher Bestandteil des Programmierens. Schlechte Lesbarkeit und schlechtes Verständnis können die Codequalität negativ beeinflussen, was zu Bugs und erhöhtem kognitivem Aufwand führt. Besonders Anfängerprogrammierer haben aufgrund ihres begrenzten Wissens häufig Schwierigkeiten. Praktiken zur Codequalität wie Einrückung und Kommentare spielen eine wichtige Rolle beim Verständnis von Code. Diese Arbeit untersucht, wie unterschiedliche Einrückungsebenen und Kommentarformate das Programmverständnis beeinflussen. Der Fokus dieser Arbeit lag auf CS1-Studenten. Es wurde ein gemischter Ansatz verwendet: eine Eye-Tracking-Studie (offline) und eine Online-Studie. CS1-Studenten analysierten sieben Java-Code-Snippets mit unterschiedlichen Einrückungsstilen (keine, 4-Leerzeichen, zufällig) und Kommentarformaten (keine, hilfreich, minimal, überflüssig). Die Eye-Tracking-Daten, einschließlich Fixierungsdauern und Blickdiagrammen, lieferten Informationen über ihre visuellen Muster, während der Fragebogen die Bewertungen der Teilnehmer hinsichtlich der Lesbarkeit und des Verständnisses des Codes erfasste. 
+Das Codeverständnis ist ein wesentlicher Bestandteil des Programmierens. Schlechte Lesbarkeit und schlechtes Verständnis können die Codequalität negativ beeinflussen, was zu Bugs und erhöhtem kognitivem Aufwand führt. Besonders Anfängerprogrammierer haben aufgrund ihres begrenzten Wissens häufig Schwierigkeiten. Praktiken zur Codequalität wie Einrückung und Kommentare spielen eine wichtige Rolle beim Verständnis von Code. Diese Arbeit untersucht, wie unterschiedliche Einrückungsebenen und Kommentarformate das Programmverständnis beeinflussen. Der Fokus dieser Arbeit lag auf CS1-Studenten. Es wurde ein gemischter Ansatz verwendet: eine Eye-Tracking-Studie (offline) und eine Online-Studie. CS1-Studenten analysierten sieben Java-Code-Snippets mit unterschiedlichen Einrückungsstilen (keine, 4 Leerzeichen, zufällig) und Kommentarformaten (keine, hilfreich, minimal, überflüssig). Die Eye-Tracking-Daten, einschließlich Fixierungsdauern und Blickdiagrammen, lieferten Informationen über ihre visuellen Muster, während der Fragebogen die Bewertungen der Teilnehmer hinsichtlich der Lesbarkeit und des Verständnisses des Codes erfasste. 
 
-Die Ergebnisse zeigten, dass Code mit einer 4-Leerzeichen-Einrückung die Lesbarkeit des Codes signifikant verbesserte und ein strukturiertes, top-down-Leseverhalten förderte. Im Gegensatz dazu verursachte zufällig eingerückter oder nicht eingerückter Code erratischere Augenbewegungen, was zu verringertem Verständnis führte. Bezüglich der Kommentare sorgten hilfreiche Kommentare für ein besseres Verständnis im Vergleich zu minimalen, überflüssigen oder fehlenden Kommentaren. Im Gegensatz dazu schränkten minimale und überflüssige Kommentare das Verständnis ein. Die Ergebnisse dieser Arbeit zeigen, dass sowohl die Einrückung als auch die Kommentarformate beeinflussen, wie Anfänger Code lesen und verstehen.
+Die Ergebnisse zeigten, dass Code mit einer 4-Leerzeichen-Einrückung die Lesbarkeit des Codes signifikant verbesserte und ein strukturiertes, Top-down-Leseverhalten förderte. Im Gegensatz dazu verursachte zufällig eingerückter oder nicht eingerückter Code erratischere Augenbewegungen, was zu verringertem Verständnis führte. Bezüglich der Kommentare sorgten hilfreiche Kommentare für ein besseres Verständnis im Vergleich zu minimalen, überflüssigen oder fehlenden Kommentaren. Im Gegensatz dazu schränkten minimale und überflüssige Kommentare das Verständnis ein. Die Ergebnisse dieser Arbeit zeigen, dass sowohl die Einrückung als auch die Kommentarformate beeinflussen, wie Anfänger Code lesen und verstehen.
 
 \cleardoublepage
 
@@ -63,7 +63,7 @@ Die Ergebnisse zeigten, dass Code mit einer 4-Leerzeichen-Einrückung die Lesbar
 
 Code comprehension has become a key part of programming. Poor readability and comprehension can negatively impact code quality, leading to bugs and increased cognitive effort. Novice programmers, in particular, often face challenges due to their limited knowledge. Code quality practices like indentation and comments play an important role in perceiving code. This thesis investigates how different indentation levels and commenting formats affect program comprehension. The focus of this thesis was on CS1 students.  A mixed approach was used: an eye-tracking study (offline) and an online study. CS1 students analysed seven Java code snippets with different indentation levels (none, 4-space, random) and commenting formats (none, helpful, minimal, redundant). The eye-tracking data, including fixation durations and gaze plots, provided information about their visual patterns, while the questionnaire provided participants' evaluations of code readability and code comprehension. 
 
-The results presented that 4-space intended code significantly improved code readability, providing structured, top-down reading behaviour. In contrast, randomly indented or unindented code caused more erratic eye movements, leading to decreased comprehension. Regarding comments, helpful comments provided higher comprehension compared to minimal, redundant, or absent comments.  In contrast, minimal and redundant comments limited comprehension. The finding is the thesis presented that both indentation and commenting formats influence how novices read and understand code.
+The results presented that 4-space intended code significantly improved code readability, providing structured, top-down reading behaviour. In contrast, randomly indented or unindented code caused more erratic eye movements, leading to decreased comprehension. Regarding comments, helpful comments provided higher comprehension compared to minimal, redundant, or absent comments.  In contrast, minimal and redundant comments limited comprehension. The finding of the thesis present that both indentation and commenting formats influence how novices read and understand code.
 \cleardoublepage
 
 
@@ -93,6 +93,7 @@ The results presented that 4-space intended code significantly improved code rea
 %\makeatother
 %
 \pagenumbering{roman}
+\pagestyle{plain}
 \tableofcontents
 
 % Bei einem ungünstigen Seitenumbruch im Inhaltsverzeichnis, kann dieser mit
