--- a/content.tex
+++ b/content.tex
@@ -268,7 +268,7 @@ In this thesis, the ISO 25010 model is adopted, since it is the most recent qual
 \section{Code readability}
 
 Readability defines how easily a text can be understood. Code readability defines how easily source code can be interpreted by a programmer \cite{bakhuizen2019comments}.  Recently, there have been studies aiming to investigate which factors influence code readability and how to achieve the best results. 
-To measure code readability, researchers measure how much time it takes for a test subject to complete a task related to reading a source snippet  \cite{bakhuizen2019comments}.   Different factors can affect the readability of code source: for instance, how the code is structured and which code formatting is used  \cite{bakhuizen2019comments}.  One example of code formatting is applying indentation \cite{buse2009learning}. In research, the term readability can be associated with the term understandability \cite{winkler2024investigating}. In this thesis, readability and understandability are used synonymously: readability refers to the structure of the code, and understandability to the comprehensibility of the code.
+To measure code readability, researchers measure how much time it takes for a test subject to complete a task related to reading a source snippet  \cite{bakhuizen2019comments}.   Different factors can affect the readability of code source: for instance, how the code is structured and which code formatting is used  \cite{bakhuizen2019comments}.  One example of code formatting is applying indentation \cite{buse2009learning}. In research, the term readability can be associated with the term understandability \cite{winkler2024investigating}. In this thesis, readability refers primarily to the structure of the code, and understandability to the comprehensibility of the code.
 
 
 \section{Code comprehension}
@@ -781,7 +781,7 @@ The programming language used for the code snippets is Java, since it is a widel
     \item \textbf{Comment formats:}
     \begin{itemize}
         \item \textbf{No comments:} Code snippet without any comments.
-        \item \textbf{Minimal comments:} Code snippet with minimal and essential comments.
+        \item \textbf{Minimal comments:} Code snippet with minimal comments.
         \item \textbf{Helpful comments:} Code snippet with meaningful comments.
         \item \textbf{Redundant comments:} Code snippet with unnecessary comments.
     \end{itemize}
@@ -845,7 +845,8 @@ The selection of the code snippets formats is based on the findings from previou
 
 
 Each snippet is focused on one dimension at a time (levels of indentation or commenting formats). This enables a simple analysis and comparison across the different formats. The study has seven different code snippets. It combines three levels of indentation and four types of commenting styles. For the commenting formats, four types are selected.  The role of the snippet with no comments is to investigate whether code can be understood without any additional information.  Minimal comments test whether minimal information is better than none and improves comprehension, or makes it difficult for understanding.
-Helpful comments investigate whether meaningful information enhances deeper code comprehension. The helpful comments were designed based on the theoretical findings discussed in the Chapter Literature Review: these comments explain the purpose of the code snippets without adding unnecessary information. Redundant comments aim to explore whether unnecessary comments make the code difficult to understand, potentially causing cognitive overload.
+Helpful comments investigate whether meaningful information enhances deeper code comprehension. The helpful comments were designed based on the theoretical findings discussed in the Chapter Literature Review: these comments explain the purpose of the code snippets without adding unnecessary information. Redundant comments aim to explore whether unnecessary comments
+(when every line is commented) make the code difficult to understand, potentially causing cognitive overload.
 
 
 For the indentation, three levels were selected. 
