--- a/main.tex
+++ b/main.tex
@@ -61,9 +61,9 @@ Die Ergebnisse zeigten, dass Code mit einer 4-Leerzeichen-Einrückung die Lesbar
 
 \section*{Abstract}
 
-Code comprehension has become a key part of programming. Poor readability and comprehension can negatively impact code quality, leading to bugs and increased cognitive effort. Novice programmers, in particular, often face challenges due to their limited knowledge. Code quality practices like indentation and comments play an important role in perceiving code. This thesis investigates how different indentation levels and commenting formats affect program comprehension. The focus of this thesis was on CS1 students.  A mixed approach was used: an eye-tracking study (offline) and an online study. CS1 students analysed seven Java code snippets with different indentation levels (none, 4-space, random) and commenting formats (none, helpful, minimal, redundant). The eye-tracking data, including fixation durations and gaze plots, provided information about their visual patterns, while the questionnaire provided participants' evaluations of code readability and code comprehension. 
+Code comprehension has become a key part of programming. Poor readability and comprehension can negatively impact code quality, leading to bugs and increased cognitive effort. Novice programmers, in particular, often face challenges due to their limited knowledge. Code quality practices like indentation and comments play an important role in perceiving code. This thesis investigates how different indentation levels and commenting formats affect program comprehension. The focus of this thesis was on CS1 students.  A mixed approach was used: an eye-tracking study (offline) and an online study. CS1 students analysed seven Java code snippets with different indentation levels (none, 4-space, random) and commenting formats (none, helpful, minimal, redundant). The eye-tracking data, including fixation durations and gaze plots, provided information about their visual patterns. The questionnaire provided participants' evaluations of code readability and code comprehension. 
 
-The results presented that 4-space intended code significantly improved code readability, providing structured, top-down reading behaviour. In contrast, randomly indented or unindented code caused more erratic eye movements, leading to decreased comprehension. Regarding comments, helpful comments provided higher comprehension compared to minimal, redundant, or absent comments.  In contrast, minimal and redundant comments limited comprehension. The finding of the thesis present that both indentation and commenting formats influence how novices read and understand code.
+The results presented that 4-space intended code significantly improved code readability. It provided structured, top-down reading behaviour. In contrast, randomly indented or unindented code caused more erratic eye movements, leading to decreased comprehension. Regarding comments, helpful comments provided higher comprehension compared to minimal, redundant, or absent comments.  In contrast, minimal and redundant comments limited comprehension. The finding of the thesis presents that both indentation and commenting formats influence how CS1 students read and understand code.
 \cleardoublepage
 
 
